--- a/MobileApp/Base.lproj/Main.storyboard
+++ b/MobileApp/Base.lproj/Main.storyboard
@@ -73,15 +73,15 @@
                                             <constraint firstAttribute="height" constant="200" id="BVn-WK-FfD"/>
                                         </constraints>
                                     </imageView>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="AVATAR" translatesAutoresizingMaskIntoConstraints="NO" id="0lk-cp-Rdo">
-                                        <rect key="frame" x="285" y="177" width="80" height="69"/>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AVATAR" translatesAutoresizingMaskIntoConstraints="NO" id="0lk-cp-Rdo">
+                                        <rect key="frame" x="285" y="157" width="80" height="69"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="80" id="r2w-eR-ulw"/>
                                             <constraint firstAttribute="height" constant="69" id="ywo-SP-Cs9"/>
                                         </constraints>
                                     </imageView>
-                                    <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0KE-Zv-7qp">
-                                        <rect key="frame" x="20" y="269" width="375" height="354"/>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0KE-Zv-7qp">
+                                        <rect key="frame" x="20" y="249" width="375" height="354"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Qvb-2K-ZRi">
                                                 <rect key="frame" x="20" y="10" width="335" height="40"/>
@@ -174,15 +174,15 @@
                                                     <constraint firstAttribute="width" constant="38" id="HVh-o7-ICY"/>
                                                 </constraints>
                                             </imageView>
-                                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="145" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="3jx-u6-Mh9">
-                                                <rect key="frame" x="0.0" y="175" width="375" height="171"/>
+                                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="145" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="3jx-u6-Mh9">
+                                                <rect key="frame" x="0.0" y="175" width="375" height="118"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 <prototypes>
-                                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="comentarioCell" rowHeight="145" id="FLI-Yy-hgm" customClass="ComentarioTableViewCell" customModule="MobileApp" customModuleProvider="target">
-                                                        <rect key="frame" x="0.0" y="28" width="375" height="145"/>
+                                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="comentarioCell" rowHeight="100" id="FLI-Yy-hgm" customClass="ComentarioTableViewCell" customModule="MobileApp" customModuleProvider="target">
+                                                        <rect key="frame" x="0.0" y="28" width="375" height="100"/>
                                                         <autoresizingMask key="autoresizingMask"/>
                                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="FLI-Yy-hgm" id="eUW-Qf-APq">
-                                                            <rect key="frame" x="0.0" y="0.0" width="375" height="145"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="375" height="99"/>
                                                             <autoresizingMask key="autoresizingMask"/>
                                                             <subviews>
                                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="KA0-X4-AQV">
@@ -193,26 +193,25 @@
                                                                     </constraints>
                                                                 </imageView>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qxy-3A-z1Y">
-                                                                    <rect key="frame" x="89" y="24" width="31" height="17"/>
+                                                                    <rect key="frame" x="80" y="24" width="31" height="16"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                                     <color key="textColor" red="0.87947565319999998" green="0.54711598159999997" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X63-h2-lKs">
-                                                                    <rect key="frame" x="89" y="45" width="31" height="14.5"/>
+                                                                    <rect key="frame" x="80" y="44" width="31" height="15"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                                     <color key="textColor" red="0.87947565319999998" green="0.54711598159999997" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tB6-CV-1fM">
-                                                                    <rect key="frame" x="89" y="64.5" width="31" height="14.5"/>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tB6-CV-1fM">
+                                                                    <rect key="frame" x="80" y="63" width="285" height="15"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                                     <color key="textColor" red="0.87947565319999998" green="0.54711598159999997" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
-                                                                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hrv-sq-q7v" customClass="CosmosView" customModule="Cosmos">
-                                                                    <rect key="frame" x="203" y="14" width="164" height="36"/>
-                                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hrv-sq-q7v" customClass="CosmosView" customModule="Cosmos">
+                                                                    <rect key="frame" x="212" y="18" width="145" height="25"/>
                                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                                     <userDefinedRuntimeAttributes>
                                                                         <userDefinedRuntimeAttribute type="number" keyPath="totalStars">
@@ -240,11 +239,14 @@
                                                                 </view>
                                                             </subviews>
                                                             <constraints>
-                                                                <constraint firstItem="X63-h2-lKs" firstAttribute="leading" secondItem="tB6-CV-1fM" secondAttribute="leading" id="6FL-hv-yLC"/>
                                                                 <constraint firstItem="X63-h2-lKs" firstAttribute="top" secondItem="qxy-3A-z1Y" secondAttribute="bottom" constant="4" id="7fX-Vs-aCC"/>
-                                                                <constraint firstItem="qxy-3A-z1Y" firstAttribute="leading" secondItem="KA0-X4-AQV" secondAttribute="trailing" constant="19" id="9W6-pB-1rG"/>
                                                                 <constraint firstItem="qxy-3A-z1Y" firstAttribute="leading" secondItem="X63-h2-lKs" secondAttribute="leading" id="BKi-5I-3Qu"/>
-                                                                <constraint firstItem="KA0-X4-AQV" firstAttribute="bottom" secondItem="tB6-CV-1fM" secondAttribute="bottom" id="lfO-I5-UXM"/>
+                                                                <constraint firstItem="X63-h2-lKs" firstAttribute="leading" secondItem="tB6-CV-1fM" secondAttribute="leading" id="Kqp-CL-Uef"/>
+                                                                <constraint firstAttribute="trailingMargin" secondItem="hrv-sq-q7v" secondAttribute="trailing" constant="10" id="QmA-ow-O6f"/>
+                                                                <constraint firstItem="tB6-CV-1fM" firstAttribute="leading" secondItem="KA0-X4-AQV" secondAttribute="trailing" constant="10" id="Xpi-ea-LVZ"/>
+                                                                <constraint firstItem="tB6-CV-1fM" firstAttribute="top" secondItem="X63-h2-lKs" secondAttribute="bottom" constant="4" id="oS9-OH-i4V"/>
+                                                                <constraint firstItem="hrv-sq-q7v" firstAttribute="top" secondItem="eUW-Qf-APq" secondAttribute="topMargin" constant="10" id="qbA-fC-ALW"/>
+                                                                <constraint firstAttribute="trailing" secondItem="tB6-CV-1fM" secondAttribute="trailing" constant="10" id="qzG-n7-paq"/>
                                                                 <constraint firstItem="KA0-X4-AQV" firstAttribute="centerY" secondItem="X63-h2-lKs" secondAttribute="centerY" id="sCV-xL-Odq"/>
                                                                 <constraint firstItem="KA0-X4-AQV" firstAttribute="leading" secondItem="eUW-Qf-APq" secondAttribute="leadingMargin" constant="6" id="sGg-Z9-kGg"/>
                                                                 <constraint firstItem="KA0-X4-AQV" firstAttribute="top" secondItem="eUW-Qf-APq" secondAttribute="topMargin" constant="16" id="siI-ig-JyQ"/>
@@ -293,8 +295,8 @@
                                             <constraint firstAttribute="trailing" secondItem="Bau-Cv-4vH" secondAttribute="trailing" id="xAJ-dx-Uv4"/>
                                         </constraints>
                                     </view>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="LOREM" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="79c-Lj-58z">
-                                        <rect key="frame" x="41" y="235" width="86" height="30"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="LOREM" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="79c-Lj-58z">
+                                        <rect key="frame" x="41" y="215" width="85.5" height="30"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
                                         <color key="textColor" red="0.8784313725490196" green="0.5490196078431373" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
